[project]
name = "sphinx_doc_demo"
version = "0.1.0"
description = "This repository shows how to utilize sphinx to automatically create professionally formatted documents and publish them to github pages."
readme = "README.md"
requires-python = "==3.7.9"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black",
]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.py$|\.ipynb$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | \.env
)/
'''

