[project]
name = "sphinx_doc_demo"
version = "0.1.0"
description = "This repository shows how to utilize sphinx to automatically create professionally formatted documents and publish them to github pages."
readme = "README.md"
requires-python = ">=3.7,<3.8"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black",
]
docs = [
    "sphinx>=4.0,<5.0",
    "sphinx-rtd-theme>=1.0,<2.0",
    "myst-parser>=0.18.0,<1.0",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.py$|\.ipynb$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | \.env
)/
'''

